Fix first container spacing

--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,13 @@ p {
 
 /* Top container */
 
-.top {
+.first {
     background-color: #1F2937;
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .header {
@@ -39,6 +41,8 @@ p {
     align-items: center;
     justify-content: space-between;
     padding: 16px;
+    gap: 310px;
+    margin-bottom: 32px;
 }
 
 .left {
